potpolio project updats

--- a/Projects/portfolio website/index.html
+++ b/Projects/portfolio website/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>shubhcode.</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -43,6 +43,7 @@
 
     </nav>
 
+    <!-- navbar for menubtn -->
     <div class="manubar2">
         <a href="#home" class="active">Home</a>
         <a href="#About">About</a>
@@ -54,7 +55,7 @@
 
 
 
-    <!-- home page -->
+    <!-- home page 1-->
     <div class="cursul">
 
     </div>
@@ -62,28 +63,33 @@
         <section id="home">
             <div class="contaner">
 
-
+                <!-- home page img -->
                 <div class="card">
                     <img src="/img/final image.png" alt="">
                 </div>
+                <!-- profile name -->
                 <div class="card2">
                     <h5 class="hello">Hello, <span>I'm</span></h5>
                     <h5 class="name">Shubham Meshram</h5>
                     <h5 class="job">Web Developer</h5>
                     <h5 class="titletag">Passionate Web Developer & AI-ML Student, Crafting Innovative Solutions with Technical Proficiency & Business Acumen.</h5>
                     <a href="/img/Shubham web developer final.pdf" download="cv">CV</a>
-                    <a href="#">Github</a>
+                    <a href="https://github.com/shubhammeshram579" target="_blank">Github</a>
                 </div>
             </div>
         </section>
 
-        <!-- about page -->
+        <!-- about page 2 -->
         <section id="About">
             <div class="page2">
+
+
+                <!-- about me page img -->
                 <div class="card">
                     <img src="/img/2.png" alt="">
-
                 </div>
+
+                <!-- about me card -->
                 <div class="card2">
                     <h1 class="about-me">About Me</h1>
                     <p>As an aspiring web developer, I am embarking on my journey with a strong foundation in HTML, CSS, JavaScript, Node.js, Express.js, MongoDB, MySQL, Git, and GitHub. Additionally, I possess proficiency in Python for machine learning applications. Currently pursuing an MBA in AI-ML, I am integrating technical skills with business acumen. Originally from Gondia and now residing in Pune, I am passionate about leveraging technology to create innovative web solutions. I am eager to apply my knowledge and continue learning in the dynamic field of web development.</p>
@@ -129,6 +135,7 @@
                         </div>
                     </div>
 
+                    <!--  education section -->
                     <div class="card6">
                         <div class="edu1">
                             <h1>2022 - 2024</h1>
@@ -145,30 +152,32 @@
 
             </div>
         </section>
-        <!-- project section -->
+
+        <!-- project page 3-->
         <section id="Project">
             <div class="page3">
                 <h1>Projects</h1>
                 <div class="contenar">
+
+
+                    <!-- project card1 -->
                     <div class="cards">
                         <div class="card1" id="card1">
                             <div class="hovercard">
-                                <p>Crafted an Amazon clone website through meticulous HTML and CSS coding. Demonstrated
+                                <p class="psummary1">Crafted an Amazon clone website through meticulous HTML and CSS coding. Demonstrated
                                     expertise in web development by replicating Amazon's user interface, showcasing attention to detail and design
                                     precision.</p>
                                 <div class="pbtns">
                                     <a id="pbtn2" class="pbtn" target="_blank"
-                                        href="https://shubhammeshram579.github.io/Animated-sport-club-website/">live</a>
-                                    <a id="pbtn2" class="pbtn" href="#">Github</a>
+                                        href="https://shubhammeshram579.github.io/Amazon-clone-website/">live</a>
+                                    <a target="_blank" id="pbtn2" class="pbtn" href="https://github.com/shubhammeshram579/Amazon-clone-website">Github</a>
                                 </div>
                             </div>
                         </div>
 
-
-
-
-
                     </div>
+
+                    <!-- project card2 -->
                     <div class="cards">
                         <div class="card1" id="card2">
                             <div class="hovercard">
@@ -178,13 +187,15 @@
                                 <div class="pbtns">
                                     <a class="pbtn" target="_blank"
                                         href="https://shubhammeshram579.github.io/Animated-sport-club-website/">live</a>
-                                    <a class="pbtn" href="#">Github</a>
+                                    <a class="pbtn" href="https://github.com/shubhammeshram579/Animated-sport-club-website" target="_blank">Github</a>
                                 </div>
                             </div>
                         </div>
 
-
                     </div>
+
+
+                    <!-- project card3 -->
                     <div class="cards">
                         <div class="card1" id="card3">
                             <div class="hovercard">
@@ -193,8 +204,8 @@
                                     responsive, visually captivating site, showcasing expertise in front-end development.</p>
                                 <div class="pbtns">
                                     <a class="pbtn" target="_blank"
-                                        href="https://shubhammeshram579.github.io/Animated-sport-club-website/">live</a>
-                                    <a class="pbtn" href="#">Github</a>
+                                        href="https://shubhammeshram579.github.io/Award-Winning-Website-Clone/">live</a>
+                                    <a class="pbtn" href="https://github.com/shubhammeshram579/Award-Winning-Website-Clone" target="_blank">Github</a>
                                 </div>
                             </div>
                         </div>
@@ -202,29 +213,40 @@
 
                     </div>
                 </div>
+
+                <!-- more project btn -->
                 <div class="more">
                     <a class="more-p" href="#">More projects</a>
                 </div>
             </div>
         </section>
-        <!-- contact page -->
+
+
+        <!-- contact page 4 -->
         <section id="Contact">
             <div class="page4">
+
+                <!-- contact detail -->
                 <div class="cot1">
                     <h1>contact me</h1>
                     <div class="contact">
+                        <i id="location" class="fa-solid fa-location-dot"><a class="atag" id="lacname" href="#">Pune Maharashtra India.</a></i>
                         <i class="fa-solid fa-paper-plane"><a class="atag" href="#">shubhcode97@gmail.com</a></i>
                         <i id="nus" class="fa-solid fa-phone"><a id="nus2" class="atag" href="#">7038956822</a></i>
                     </div>
                     <div class="socialmedia">
-                        <i class="fa-brands fa-linkedin"></i>
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-github"></i>
+                        <a target="_blank" href="https://www.linkedin.com/in/smeshram579/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a target="_blank" href="https://twitter.com/shubham35502011"><i class="fa-brands fa-twitter"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/meshram8892/"> <i class="fa-brands fa-instagram"></i></a>
+                        <a target="_blank" href="https://github.com/shubhammeshram579"><i class="fa-brands fa-github"></i></a>
+                       
+                        
                     </div>
                     <input class="downloadbtn" type="submit" value="download cv">
 
                 </div>
+
+                <!-- email massages send me section -->
                 <div class="cot2">
                     <form class="cotect-form" action="#"> 
                         <input class="name-email" type="text" name="yourname" id="yourname"
@@ -239,16 +261,17 @@
                 </div>
 
             </div>
-
-
-            <!-- </div> -->
         </section>
     </div>
+
+    <!-- footer section -->
     <footer>
         <a href="#">Contact Us</a>
         <a href="#">&copy: 2023 | 2024 Web Developer</a>
     </footer>
 
+
+    <!-- JavaScript some libraries utilise like gsap for animation apply -->
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
