--- a/CSS/final_project/index.html
+++ b/CSS/final_project/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="notes/favicon_io (1)/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="notes/favicon_io (1)/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="notes/favicon_io (1)/favicon-16x16.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="notes/favicon_io (1)/apple-touch-icon.png"> -->
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="notes/favicon_io (1)/favicon-32x32.png"> -->
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="notes/favicon_io (1)/favicon-16x16.png"> -->
     <link rel="manifest" href="notes/favicon_io (1)/site.webmanifest">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
