--- a/Projects/portfolio website/index.html
+++ b/Projects/portfolio website/index.html
@@ -65,7 +65,7 @@
 
                 <!-- home page img -->
                 <div class="card">
-                    <img src="/img/final image.png" alt="">
+                    <img src="/img/finalimg.png" alt="">
                 </div>
                 <!-- profile name -->
                 <div class="card2">
