--- a/Projects/portfolio website/index.html
+++ b/Projects/portfolio website/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <video src="/img/back3.mp4" autoplay muted loop></video>
+    <video src="./img/back3.mp4" autoplay muted loop></video>
 
     <!-- navbar -->
     <nav class="nav">
@@ -43,6 +43,8 @@
 
     </nav>
 
+   
+
     <!-- navbar for menubtn -->
     <div class="manubar2">
         <a href="#home" class="active">Home</a>
@@ -61,38 +63,41 @@
     </div>
     <div class="main">
         <section id="home">
-            <div class="contaner">
 
-                <!-- home page img -->
-                <div class="card">
-                    <img src="/img/finalimg.png" alt="">
-                </div>
-                <!-- profile name -->
-                <div class="card2">
-                    <h5 class="hello">Hello, <span>I'm</span></h5>
-                    <h5 class="name">Shubham Meshram</h5>
-                    <h5 class="job">Web Developer</h5>
-                    <h5 class="titletag">Passionate Web Developer & AI-ML Student, Crafting Innovative Solutions with Technical Proficiency & Business Acumen.</h5>
-                    <a href="/img/Shubham web developer final.pdf" download="cv">CV</a>
+
+            <!-- home page img -->
+            <div class="card">
+                <img src="./img/finalimg.png" alt="">
+            </div>
+            <!-- profile name -->
+            <div class="card2">
+                <h5 class="hello">Hello, <span>I'm</span></h5>
+                <h5 class="name">Shubham Meshram</h5>
+                <h5 class="job">Web Developer</h5>
+                <h5 class="titletag">Passionate Web Developer & AI-ML Student, Crafting Innovative Solutions with
+                    Technical Proficiency & Business Acumen.</h5>
+                <div class="homebtn">
+                    <a href="./img/Shubham-web-developer-final.pdf" download="cv">CV</a>
                     <a href="https://github.com/shubhammeshram579" target="_blank">Github</a>
                 </div>
             </div>
+
         </section>
 
         <!-- about page 2 -->
         <section id="About">
-            <div class="page2">
 
-
-                <!-- about me page img -->
-                <div class="card">
-                    <img src="/img/2.png" alt="">
-                </div>
-
-                <!-- about me card -->
-                <div class="card2">
+            <!-- about me card -->
+            <div class="card2">
+                <img src="./img/2.png" alt="">
+                <div class="box">
                     <h1 class="about-me">About Me</h1>
-                    <p>As an aspiring web developer, I am embarking on my journey with a strong foundation in HTML, CSS, JavaScript, Node.js, Express.js, MongoDB, MySQL, Git, and GitHub. Additionally, I possess proficiency in Python for machine learning applications. Currently pursuing an MBA in AI-ML, I am integrating technical skills with business acumen. Originally from Gondia and now residing in Pune, I am passionate about leveraging technology to create innovative web solutions. I am eager to apply my knowledge and continue learning in the dynamic field of web development.</p>
+                    <p>As an aspiring web developer, I am embarking on my journey with a strong foundation in HTML, CSS,
+                        JavaScript, Node.js, Express.js, MongoDB, MySQL, Git, and GitHub. Additionally, I possess
+                        proficiency in Python for machine learning applications. Currently pursuing an MBA in AI-ML, I
+                        am integrating technical skills with business acumen. Originally from Gondia and now residing in
+                        Pune, I am passionate about leveraging technology to create innovative web solutions. I am eager
+                        to apply my knowledge and continue learning in the dynamic field of web development.</p>
                     <!-- skills section -->
                     <div class="card3">
                         <h1 id="skills">Skills</h1>
@@ -149,8 +154,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+
         </section>
 
         <!-- project page 3-->
@@ -164,13 +169,16 @@
                     <div class="cards">
                         <div class="card1" id="card1">
                             <div class="hovercard">
-                                <p class="psummary1">Crafted an Amazon clone website through meticulous HTML and CSS coding. Demonstrated
-                                    expertise in web development by replicating Amazon's user interface, showcasing attention to detail and design
+                                <p class="psummary1">Crafted an Amazon clone website through meticulous HTML and CSS
+                                    coding. Demonstrated
+                                    expertise in web development by replicating Amazon's user interface, showcasing
+                                    attention to detail and design
                                     precision.</p>
                                 <div class="pbtns">
                                     <a id="pbtn2" class="pbtn" target="_blank"
                                         href="https://shubhammeshram579.github.io/Amazon-clone-website/">live</a>
-                                    <a target="_blank" id="pbtn2" class="pbtn" href="https://github.com/shubhammeshram579/Amazon-clone-website">Github</a>
+                                    <a target="_blank" id="pbtn2" class="pbtn"
+                                        href="https://github.com/shubhammeshram579/Amazon-clone-website">Github</a>
                                 </div>
                             </div>
                         </div>
@@ -181,31 +189,39 @@
                     <div class="cards">
                         <div class="card1" id="card2">
                             <div class="hovercard">
-                                <p>As a versatile web developer with proficiency in HTML, CSS, and JavaScript, I successfully
-                                    crafted an animated website. I utilized GSAP and Locomotive for dynamic animations, resulting in a visually stunning
-                                    and responsive site. This showcases my expertise in creating engaging and interactive web experiences.</p>
+                                <p>As a versatile web developer with proficiency in HTML, CSS, and JavaScript, I
+                                    successfully
+                                    crafted an animated website. I utilized GSAP and Locomotive for dynamic animations,
+                                    resulting in a visually stunning
+                                    and responsive site. This showcases my expertise in creating engaging and
+                                    interactive web experiences.</p>
                                 <div class="pbtns">
                                     <a class="pbtn" target="_blank"
                                         href="https://shubhammeshram579.github.io/Animated-sport-club-website/">live</a>
-                                    <a class="pbtn" href="https://github.com/shubhammeshram579/Animated-sport-club-website" target="_blank">Github</a>
+                                    <a class="pbtn"
+                                        href="https://github.com/shubhammeshram579/Animated-sport-club-website"
+                                        target="_blank">Github</a>
                                 </div>
                             </div>
                         </div>
 
                     </div>
 
-
                     <!-- project card3 -->
                     <div class="cards">
                         <div class="card1" id="card3">
                             <div class="hovercard">
                                 <p> Developed an award-winning website clone using HTML, CSS, and JavaScript.
-                                    Integrated GSAP for dynamic animations and leveraged Locomotive library for smooth scrolling effects. Achieved a
-                                    responsive, visually captivating site, showcasing expertise in front-end development.</p>
+                                    Integrated GSAP for dynamic animations and leveraged Locomotive library for smooth
+                                    scrolling effects. Achieved a
+                                    responsive, visually captivating site, showcasing expertise in front-end
+                                    development.</p>
                                 <div class="pbtns">
                                     <a class="pbtn" target="_blank"
                                         href="https://shubhammeshram579.github.io/Award-Winning-Website-Clone/">live</a>
-                                    <a class="pbtn" href="https://github.com/shubhammeshram579/Award-Winning-Website-Clone" target="_blank">Github</a>
+                                    <a class="pbtn"
+                                        href="https://github.com/shubhammeshram579/Award-Winning-Website-Clone"
+                                        target="_blank">Github</a>
                                 </div>
                             </div>
                         </div>
@@ -224,43 +240,46 @@
 
         <!-- contact page 4 -->
         <section id="Contact">
-            <div class="page4">
 
-                <!-- contact detail -->
-                <div class="cot1">
-                    <h1>contact me</h1>
-                    <div class="contact">
-                        <i id="location" class="fa-solid fa-location-dot"><a class="atag" id="lacname" href="#">Pune Maharashtra India.</a></i>
-                        <i class="fa-solid fa-paper-plane"><a class="atag" href="#">shubhcode97@gmail.com</a></i>
-                        <i id="nus" class="fa-solid fa-phone"><a id="nus2" class="atag" href="#">7038956822</a></i>
-                    </div>
-                    <div class="socialmedia">
-                        <a target="_blank" href="https://www.linkedin.com/in/smeshram579/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a target="_blank" href="https://twitter.com/shubham35502011"><i class="fa-brands fa-twitter"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/meshram8892/"> <i class="fa-brands fa-instagram"></i></a>
-                        <a target="_blank" href="https://github.com/shubhammeshram579"><i class="fa-brands fa-github"></i></a>
-                       
-                        
-                    </div>
-                    <input class="downloadbtn" type="submit" value="download cv">
-
+            <!-- contact detail -->
+            <div class="cot1">
+                <h1>contact me</h1>
+                <div class="contact">
+                    <i id="location" class="fa-solid fa-location-dot"><a class="atag" id="lacname" href="#">Pune
+                            Maharashtra India.</a></i>
+                    <i class="fa-solid fa-paper-plane"><a class="atag" href="#">shubhcode97@gmail.com</a></i>
+                    <i id="nus" class="fa-solid fa-phone"><a id="nus2" class="atag" href="#">7038956822</a></i>
                 </div>
-
-                <!-- email massages send me section -->
-                <div class="cot2">
-                    <form class="cotect-form" action="#"> 
-                        <input class="name-email" type="text" name="yourname" id="yourname"
-                            placeholder="   yourname">
-                        <input class="name-email" type="email" name="email" id="email" placeholder="  your email">
-                        <textarea class="message" name="your message" id="" cols="30" rows="10"
-                            placeholder=" your message"></textarea>
-                        <input class="btn" type="submit">
-                    </form>
+                <div class="socialmedia">
+                    <a target="_blank" href="https://www.linkedin.com/in/smeshram579/"><i
+                            class="fa-brands fa-linkedin"></i></a>
+                    <a target="_blank" href="https://twitter.com/shubham35502011"><i
+                            class="fa-brands fa-twitter"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/meshram8892/"> <i
+                            class="fa-brands fa-instagram"></i></a>
+                    <a target="_blank" href="https://github.com/shubhammeshram579"><i
+                            class="fa-brands fa-github"></i></a>
 
 
                 </div>
+                <input class="downloadbtn" type="submit" value="download cv">
 
             </div>
+
+            <!-- email massages send me section -->
+            <div class="cot2">
+                <form class="cotect-form" action="#">
+                    <input class="name-email" type="text" name="yourname" id="yourname" placeholder="   yourname">
+                    <input class="name-email" type="email" name="email" id="email" placeholder="  your email">
+                    <textarea class="message" name="your message" id="" cols="30" rows="10"
+                        placeholder=" your message"></textarea>
+                    <input class="btn" type="submit">
+                </form>
+
+
+            </div>
+
+
         </section>
     </div>
 
