--- a/Projects/project 2/index.html
+++ b/Projects/project 2/index.html
@@ -43,7 +43,7 @@
     <div id="cursor-blur"></div>
 
     <!-- background video -->
-    <video autoplay loop muted src="/raw data/final golf.mp4"></video>
+    <video autoplay loop muted src="/raw data/golf video.mp4"></video>
 
     <!-- main page -->
     <div id="main">
