searbar feature learn using js

--- a/CSS/gsap animation/scrolltriger in gsap.html
+++ b/CSS/gsap animation/scrolltriger in gsap.html
@@ -149,7 +149,7 @@
             backgroundColor:"#111",
             scrollTrigger: {
             trigger: ".page2",
-            scroller: "body",
+            scroller: ".main",
             start: "top 10%",
             end: "top 35%",
             scrub:2,
