megaproject work in progress

--- a/Javascript/JAVASCRIPT/BASIC OF JS/revision js/R basic of js.html
+++ b/Javascript/JAVASCRIPT/BASIC OF JS/revision js/R basic of js.html
@@ -298,6 +298,8 @@
         // contruction function
         // callback function
         // arrow function
+        //curring function 
+        // closser function it smiler tho highored function
 
 
         function abcd() {
