create miny react project

--- a/Projects/project 5/index.html
+++ b/Projects/project 5/index.html
@@ -157,10 +157,28 @@
             </div>
         </div>
 
+
+        <div class="page4">
+                <div class="card">
+                        <img src="/image.webp" alt="">
+                        
+                </div>
+                <div class="card2">
+                        <i class="ri-play-fill"></i>
+                </div>
+                <div class="card3">
+                        <video autoplay loop muted src="/accern-rhea-cover-big.mp4"></video>
+
+                </div>
+               
+        </div>
+
     </div>
 
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 
