--- a/reactjs/react practise/postFullStack project/frontend/index.html
+++ b/reactjs/react practise/postFullStack project/frontend/index.html
@@ -7,6 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Vite + React</title>
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+      }
+
+      html,body{
+        height: 100%;
+        width: 100%;
+      }
+
+      body{
+        background-color:rgb(221, 221, 210);
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
