add animation effect in fullstack projec

--- a/reactjs/react practise/postFullStack project/frontend/index.html
+++ b/reactjs/react practise/postFullStack project/frontend/index.html
@@ -17,10 +17,15 @@
       html,body{
         height: 100%;
         width: 100%;
+        overflow: hidden;
+
       }
 
       body{
-        background-color:rgb(221, 221, 210);
+        /* background-color:rgb(221, 221, 210); */
+        background-color:#11111127;
+        /* background-color: red; */
+        /* overflow-y: hidden; */
       }
     </style>
   </head>
