updated fullstack project

--- a/reactjs/react practise/postFullStack project/frontend/index.html
+++ b/reactjs/react practise/postFullStack project/frontend/index.html
@@ -1,43 +1,113 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Vite + React</title>
-    <style>
-      *{
-        padding: 0;
-        margin: 0;
-      }
+<html lang="en" style="scroll-behavior: smooth;">
 
-      html,body{
-        height: 100%;
-        width: 100%;
-        overflow: hidden;
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+  <title>Vite + React</title>
+  <style>
+    * {
+      padding: 0px;
+      margin: 0px;
+      box-sizing: border-box;
+    }
 
-      }
+    html,
+    body {
+      height: 100%;
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      overflow-x: hidden;
 
-      body{
-        /* background-color:rgb(221, 221, 210); */
-        background-color:#11111127;
-        /* background-color: red; */
-        /* overflow-y: hidden; */
-      }
-    </style>
-  </head>
-  <body>
-    <div id="root"></div>
+    }
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
-        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
-        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    body {
+
+      background-color: #11111127;
+      padding: 0;
+      margin: 0;
+
+    }
+
+    body {
+      position: absolute;
+      z-index: 999;
+      /* background-color: red; */
+    }
+
+
+    body::-webkit-scrollbar {
+      display: block;
+      width: 7px;
+      background-color:#fff;
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: gray;
+      border-radius: 50px;
+
+    }
+
+
+   
+  </style>
+</head>
+
+<body>
+  <div id="root"></div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+    integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+    integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script type="module" src="/src/main.jsx"></script>
+
+  <!-- <script>
+    function locoscrollani() {
+      gsap.registerPlugin(ScrollTrigger);
+      const locoScroll = new LocomotiveScroll({
+        el: document.querySelector("#root"),
+        smooth: true,
+        mobile: {
+          smooth: true
+        },
+        tablet: {
+          smooth: true
+        }
+      });
+      locoScroll.on("scroll", ScrollTrigger.update);
+
+      ScrollTrigger.scrollerProxy("#root", {
+        scrollTop(value) {
+          return arguments.length ? locoScroll.scrollTo(value, 0, 0) : locoScroll.scroll.instance.scroll.y;
+        },
+        getBoundingClientRect() {
+          return { top: 0, left: 0, width: window.innerWidth, height: window.innerHeight };
+        },
+
+        pinType: document.querySelector("#root").style.transform ? "transform" : "fixed"
+      });
+
+      ScrollTrigger.addEventListener("refresh", () => locoScroll.update());
+
+      ScrollTrigger.refresh();
+
+    };
+
+    locoscrollani();
+  </script> -->
+</body>
+
 </html>
