fullstack project is done

--- a/reactjs/react practise/postFullStack project/frontend/index.html
+++ b/reactjs/react practise/postFullStack project/frontend/index.html
@@ -56,6 +56,23 @@
 
     }
 
+    /* @media  (max-width:767px){
+
+     
+    body::-webkit-scrollbar {
+      display: block;
+      width: 7px;
+      background-color:#fff;
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: gray;
+      border-radius: 50px;
+
+    }
+      
+    } */
+
 
    
   </style>
