update awared websiteProject

--- a/Javascript/JAVASCRIPT/InterView prapation/practise/ConditionStatmentP.html
+++ b/Javascript/JAVASCRIPT/InterView prapation/practise/ConditionStatmentP.html
@@ -90,6 +90,17 @@
           }
 
 
+        //   pratice
+          let obj = "red"
+          if(obj === "red"){
+            console.log("it is red")
+          }else if(obj === "green"){
+            console.log("it is not red")
+          }else{
+            console.log("it is not red color")
+          }
+
+
 
            // 4. Question: What’s the difference between == and === in JavaScript ? Answer : == compares values after type coercion, while === compares both value and type strictly.
 
@@ -104,11 +115,22 @@
 
 
 
+        //    pracice
+           if(value === null){
+            console.log("value is null")
+           }else if(value === undefined){
+            console.log("value is undifined")
+           }else{
+            console.log("value is not null and undfied")
+           }
+
+
+
         // Intermediate Level
         // 5.Question: How can you check if a number is even or odd using a conditional statement?Answer:
 
         // dout % 2?
-        // let number = 20
+       
         // evend
         if(number % 2 === 0){
             console.log("even")
@@ -121,6 +143,16 @@
             console.log("even")
         }else{
             console.log("odd")
+        }
+
+
+
+        // practice
+        let nums = 20
+        if(nums % 3 === 0){
+            console.log("it is even")
+        }else{
+            console.log("it is odd")
         }
 
 
@@ -138,6 +170,16 @@
         let age = 19
         let conVot2 = age >= 18 ? "yes, you can vot" : "not ,you can vot"
         console.log(conVot2)
+
+
+        // practise
+        let age2 = 10
+        if(age2 >= 18){
+            console.log("yes your eligble for vot")
+
+        }else{
+            console.log("not eligible for vot")
+        }
 
 
         // 7.Question: How do you use a switch statement to check the value of a variable ? Answer :
