--- a/DSA/Recursion/ReconsionPractise.html
+++ b/DSA/Recursion/ReconsionPractise.html
@@ -39,6 +39,21 @@
         // main function
         recursion(5)
 
+        // practise nov-24
+        function reviRec(n){
+
+            // base condition 
+            if(n === 0){
+                return;
+            }
+
+            console.log("recurssion number print 5 to 1 ",n)
+
+            reviRec(n - 1)
+        }
+
+        reviRec(10)
+
 
 
         // 2. Recursive Function to Print Numbers from 1 to 5;
@@ -61,6 +76,21 @@
         // reconssion2(1)
 
 
+        // practise nov-24
+        function revAddNumRec(n){
+            if(n > 10){
+                return;
+            }
+
+            console.log(n)
+            revAddNumRec(n + 1)
+        }
+
+        // revAddNumRec(1)
+
+
+
+
 
         //3. Recursive Function to Calculate the Sum of First n Natural Numbers;
 
@@ -75,6 +105,17 @@
         }
 
         console.log(storeSum)
+
+
+        let arr2 = [5,6,7,89];
+        let sumArrey = 0;
+
+        for (let i = 0; i < arr2.length; i++){
+            // console.log(arr2[i])
+            sumArrey += arr2[i]
+        }
+
+        console.log("total array",sumArrey)
 
 
 
@@ -100,6 +141,21 @@
         }
 
         console.log(recursionSum(5));
+
+
+
+        // practice nov-24
+        function revRecSum(n){
+            if(n === 0){
+                return 0;
+
+            }
+
+            return n + revRecSum(n - 1)
+        }
+
+        console.log(revRecSum(10))
+
 
 
 
