--- a/Javascript/JAVASCRIPT/BASIC OF JS/revission js basic nov-24/js basic.html
+++ b/Javascript/JAVASCRIPT/BASIC OF JS/revission js basic nov-24/js basic.html
@@ -49,7 +49,8 @@
 
             // 3. what is datatypes in js?
 
-                // In JavaScript, a data type is a classification that specifies the type of value a variable can hold. It determines what operations can be performed on the data and how it is stored in memory.
+                // In JavaScript, a data type is a classification that specifies the type of value a variable can hold. 
+                // It determines what operations can be performed on the data and how it is stored in memory.
 
                     // two type of datatype in js
                     // 1. primitive
